--- a/index.html
+++ b/index.html
@@ -743,9 +743,9 @@
                     </div>
 
                     <div class="content">
-                        <h3><a href="https://cloudsimulations.com/author/juergen-hackl/estimating-network-related-risks/">Estimating network related risks</a></h3>
+                        <h3><a href="https://cloudsimulations.com/blog/estimating-network-related-risks/">Estimating network related risks</a></h3>
                         <p>Networks such as transportation, water, and power are critical lifelines for society.</p>
-                        <a class="btn btn-transparent" href="https://cloudsimulations.com/author/juergen-hackl/estimating-network-related-risks/">Read more</a>
+                        <a class="btn btn-transparent" href="https://cloudsimulations.com/blog/estimating-network-related-risks/">Read more</a>
                     </div>
                 </div>
             </article>
@@ -753,7 +753,7 @@
             
 
             <div class="all-post text-center col-lg-12">
-                <a class="btn btn-main" href="/posts">View All Post</a>
+                <a class="btn btn-main" href="/blog">View All Post</a>
             </div>
         </div>
     </div>
