fix an other typo

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     <div class="service-icon text-center">
                         <i class="tf-edit"></i>
                     </div>
-                    <h3>Visual Programing</h3>
+                    <h3>Visual Programming</h3>
                     <p></p>
                 </div>
             </article>
